--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ViewModels\Base\" />
     <Folder Include="wwwroot\Resources\images\" />
   </ItemGroup>
 
