--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -22,12 +22,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WriteMe.Database.DAL\WriteMe.Database.DAL.csproj" />
-    <ProjectReference Include="..\WriteMe.Database.Interfaces\WriteMe.Database.Interfaces.csproj" />
+    <ProjectReference Include="..\Database.DAL\Database.DAL.csproj" />
+    <ProjectReference Include="..\Database.Interfaces\Database.Interfaces.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Infrastructure\Data\" />
+    <Folder Include="Infrastructure\Extensions\" />
+    <Folder Include="ViewModels\Base\" />
     <Folder Include="wwwroot\Resources\images\" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
