--- a/Website/appsettings.json
+++ b/Website/appsettings.json
@@ -12,7 +12,7 @@
     "ConnectionStrings": {
       "MSSQL": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=writemedatabase.db;Integrated Security=True",
       "SQLite": "Data Source=writemedatabase.db",
-      "MySql": "server=localhost;port=3306;database=writemedatabase;uid=root;password=admin"
+      "MySql": "server=localhost;port=3306;database=writemedatabase;uid=root;password=admin;AllowZeroDateTime=True;ConvertZeroDateTime=True "
     }
   }
 }
