Разработан прототип сервисов дружбы

--- a/Website/appsettings.json
+++ b/Website/appsettings.json
@@ -12,7 +12,7 @@
     "ConnectionStrings": {
       "MSSQL": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=writemedatabase.db;Integrated Security=True",
       "SQLite": "Data Source=writemedatabase.db",
-      "MySql": "server=localhost;port=3306;database=writemedatabase;uid=root;password=1234"
+      "MySql": "server=localhost;port=3306;database=testweb1;uid=root;password=root"
     }
   }
 }
