--- a/Database.DAL/Database.DAL.csproj
+++ b/Database.DAL/Database.DAL.csproj
@@ -14,5 +14,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Database.Interfaces\Database.Interfaces.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
 
 </Project>
