--- a/Database.DAL/Database.DAL.csproj
+++ b/Database.DAL/Database.DAL.csproj
@@ -15,7 +15,7 @@
     <ProjectReference Include="..\Database.Interfaces\Database.Interfaces.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <Folder Include="TestsData\" />
   </ItemGroup>
 
 </Project>
