--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -24,13 +24,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Database.DAL\Database.DAL.csproj" />
     <ProjectReference Include="..\Database.Interfaces\Database.Interfaces.csproj" />
+    <ProjectReference Include="..\Services.Interfaces\Services.Interfaces.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Infrastructure\Data\" />
-    <Folder Include="ViewModels\Base\" />
+    <Folder Include="ViewModels\" />
     <Folder Include="wwwroot\Resources\images\" />
   </ItemGroup>
 
