--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -26,10 +26,12 @@
   <ItemGroup>
     <ProjectReference Include="..\Database.Interfaces\Database.Interfaces.csproj" />
     <ProjectReference Include="..\Services.Interfaces\Services.Interfaces.csproj" />
+    <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Infrastructure\Data\" />
+    <Folder Include="Infrastructure\Services\Extensions\" />
     <Folder Include="ViewModels\" />
     <Folder Include="wwwroot\Resources\images\" />
   </ItemGroup>
