--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+Website/wwwroot/uploads
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
